# nanohub-mcp

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
docs/: api.rst  clients.rst  conf.py  endpoints.rst  examples.rst  index.rst  nanohub.rst  quickstart.rst  requirements.txt  testing.rst
examples/data_analysis/: start_mcp.py
examples/simple/: start_mcp.py
examples/simulator/: start_mcp.py
nanohubmcp/: __init__.py  cli.py  context.py  decorators.py  server.py  types.py
tests/: test_mcp_server.py
